--- a/index.html
+++ b/index.html
@@ -187,18 +187,18 @@
       width: 100%;
       height: auto;
       display: block;
-      /* Tilt effects removed */
     }
     .project-body {
       padding: 2rem;
     }
+    /* Updated link styling for project titles */
     .project-body h3 a {
-      text-decoration: none;
-      color: var(--dark);
+      text-decoration: underline;
+      color: var(--primary);
       transition: color 0.3s;
     }
     .project-body h3 a:hover {
-      color: var(--primary);
+      color: var(--accent);
     }
     .project-body h4 {
       color: var(--accent);
@@ -324,7 +324,7 @@
     <div id="particles-js"></div>
     <div class="content">
       <h1>Welcome to My Portfolio</h1>
-      <p>Exploring Data, ETL Process, and Predictive Modelling with Passion</p>
+      <p>Exploring Data, ETL, and Predictive Modelling with Passion</p>
     </div>
   </section>
 
