--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <div id="particles-js"></div>
     <div class="content">
       <h1>Welcome to My Portfolio</h1>
-      <p>Exploring Data, ETL, and Predictive Modelling with Passion</p>
+      <p>Exploring Data, ETL Process, and Predictive Modelling with Passion</p>
     </div>
   </section>
 
